mobile overlay z-index fix

--- a/src/Components/UI/SideBar/SideBar.module.scss
+++ b/src/Components/UI/SideBar/SideBar.module.scss
@@ -48,7 +48,7 @@
 .MobileOverlay{
     width: 100%;
     height: 100%;
-    z-index: 90;
+    z-index: 130;
     position: absolute;
     background: rgba(0,0,0,0.25);
     top:0;
